<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/a"
            android:layout_width="@dimen/logo_item_size"
            android:layout_height="@dimen/logo_item_size"
            android:layout_marginTop="130dp"
            android:layout_marginStart="3dp"
            android:rotation="-3"
            android:translationY="-3dp"
            android:text="@string/logo_first_char"
            style="@style/LogoItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/b"
            android:layout_width="@dimen/logo_item_size"
            android:layout_height="@dimen/logo_item_size"
            android:layout_marginStart="50dp"
            android:layout_marginTop="12dp"
            android:rotation="-20"
            android:text="@string/logo_second_char"
            style="@style/LogoItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/c"
            android:layout_width="@dimen/logo_item_size"
            android:layout_height="@dimen/logo_item_size"
            android:layout_marginStart="13dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="10dp"
            android:rotation="14"
            android:text="@string/logo_third_char"
            style="@style/LogoItem"
            app:layout_constraintStart_toEndOf="@id/a"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/d"
            android:layout_width="@dimen/logo_item_size"
            android:layout_height="@dimen/logo_item_size"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:rotation="10"
            android:text="@string/logo_fourth_char"
            style="@style/LogoItem"
            app:layout_constraintStart_toEndOf="@id/b"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/e"
            android:layout_width="@dimen/logo_item_size"
            android:layout_height="@dimen/logo_item_size"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="10dp"
            android:rotation="-5"
            android:text="@string/logo_fifth_char"
            style="@style/LogoItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/c"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>