<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/view_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    style="@style/MaterialButtonStyle.MainMenuButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/start_one_man_game"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/MaterialButtonStyle.MainMenuButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_tiny"
                    android:text="@string/start_game_with_android"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/MaterialButtonStyle.MainMenuButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_tiny"
                    android:text="@string/start_game_with_friends"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/MaterialButtonStyle.MainMenuButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_tiny"
                    android:text="@string/settings"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>