<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.basik.balda.view.fragments.game_options.GameOptionsViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundScreen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="64dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp">

                        <TextView
                            android:id="@+id/titleInitWorld"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/stix_two_text"
                            android:text="@string/enter_init_word"
                            android:textSize="28sp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iconGenerateWorld"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_below="@id/titleInitWorld"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="4dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:padding="8dp"
                            android:scaleType="centerCrop"
                            android:onClick="@{() -> viewModel.generateRandomWord()}"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/ic_dice" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputLayoutInitWorld"
                            style="@style/MyEditTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/titleInitWorld"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="4dp"
                            android:layout_toStartOf="@id/iconGenerateWorld"
                            android:hint="@string/hint_init_word"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputInitWorld"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/stix_two_text"
                                android:inputType="textCapCharacters|textNoSuggestions"
                                tools:text="БАЛДА" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp">

                        <TextView
                            android:id="@+id/titleEnterPlayers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/stix_two_text"
                            android:text="@string/enter_players"
                            android:textSize="28sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerPlayers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/titleEnterPlayers"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:orientation="horizontal"
                            android:overScrollMode="ifContentScrolls"
                            app:playerList="@{viewModel.players}"
                            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                            tools:itemCount="3"
                            tools:listitem="@layout/item_player" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/buttonAddPlayer"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_below="@id/recyclerPlayers"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="4dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:onClick="@{() -> viewModel.addPlayer(inputPlayerName.getText().toString())}"
                            android:padding="8dp"
                            android:scaleType="centerCrop"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/ic_add" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputLayoutPlayerName"
                            style="@style/MyEditTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/recyclerPlayers"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="4dp"
                            android:layout_toStartOf="@id/buttonAddPlayer"
                            android:hint="@string/hint_player_name"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputPlayerName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/stix_two_text"
                                android:inputType="textPersonName|textCapWords|textNoSuggestions"
                                android:maxLength="25"
                                tools:text="Jackson" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp"
                            android:rotation="180"
                            android:onClick="@{() -> viewModel.reduceFieldSize()}"
                            app:layout_constraintBottom_toBottomOf="@+id/textSwitcherFieldSize"
                            app:layout_constraintEnd_toStartOf="@+id/textSwitcherFieldSize"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/textSwitcherFieldSize"
                            app:srcCompat="@drawable/ic_arrow_right"
                            app:tint="@color/enabled_color_selector"/>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp"
                            android:onClick="@{() -> viewModel.increaseFieldSize()}"
                            app:layout_constraintBottom_toBottomOf="@+id/textSwitcherFieldSize"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/textSwitcherFieldSize"
                            app:layout_constraintTop_toTopOf="@+id/textSwitcherFieldSize"
                            app:srcCompat="@drawable/ic_arrow_right"
                            app:tint="@color/enabled_color_selector"/>

                        <TextSwitcher
                            android:id="@+id/textSwitcherFieldSize"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/stix_two_text"
                            android:gravity="center"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/chooseFieldSizeTitle"
                            tools:text="Extra Large" />

                        <TextView
                            android:id="@+id/fieldSizeInvisible"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/stix_two_text"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:visibility="invisible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/chooseFieldSizeTitle"
                            tools:text="Extra Large"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/chooseFieldSizeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/stix_two_text"
                            android:text="@string/choose_field_size"
                            android:textSize="28sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                        <RadioGroup
                            android:id="@+id/radioGroupFieldType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/chooseFieldTypeTitle">

                            <RadioButton
                                android:id="@+id/radioButtonSquare"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/stix_two_text"
                                android:text="@string/field_type_square"
                                android:textColor="@color/checked_color_selector"
                                android:textSize="24sp" />

                            <RadioButton
                                android:id="@+id/radioButtonHexagon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:fontFamily="@font/stix_two_text"
                                android:text="@string/field_type_hexagon"
                                android:textColor="@color/checked_color_selector"
                                android:textSize="24sp" />
                        </RadioGroup>

                        <TextView
                            android:id="@+id/chooseFieldTypeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/stix_two_text"
                            android:text="@string/choose_field_type"
                            android:textSize="28sp"
                            app:layout_constraintBottom_toTopOf="@id/radioGroupFieldType"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/errorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorError"
                    android:textSize="12sp"
                    android:visibility="invisible"
                    tools:text="length of word must be 4 for this field" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/b_start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|center"
            android:contentDescription="@string/start_game"
            android:text="@string/start_game"
            android:onClick="@{() -> viewModel.startGame()}"
            app:icon="@drawable/ic_confirm" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>